--- a/ESPA/ESPA.csproj
+++ b/ESPA/ESPA.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="areaCls.cs" />
+    <Compile Include="best_fit.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
